--- a/README.Rmd
+++ b/README.Rmd
@@ -24,8 +24,8 @@ The internals are a little hacky, but the point is to have as few dependencies a
 ## Package Status and Installation
 
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/ropensci/apipkgen?branch=master&svg=true)](https://ci.appveyor.com/project/ropensci/apipkgen)
-[![Travis-CI Build Status](https://travis-ci.org/ropensci/apipkgen.svg?branch=master)](https://travis-ci.org/)
- [![codecov](https://codecov.io/gh/ropensci/apipkgen/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/apipkgen)
+[![Travis-CI Build Status](https://travis-ci.org/ropenscilabs/apipkgen.svg?branch=master)](https://travis-ci.org/)
+ [![codecov](https://codecov.io/gh/ropenscilabs/apipkgen/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/apipkgen)
 [![rstudio mirror downloads](http://cranlogs.r-pkg.org/badges/apipkgen?color=blue)](https://github.com/metacran/cranlogs.app)
 
 ```{r eval=FALSE}
