readme badge fixes

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,5 @@
-# apipkgen
+apipkgen
+========
 
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 ![GitHub _0.0.1.9310](https://img.shields.io/badge/GitHub-_0.0.1.9310-blue.svg)
