--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,7 @@
 apipkgen
 ========
 
-[![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-![GitHub _0.0.1.9310](https://img.shields.io/badge/GitHub-_0.0.1.9310-blue.svg)
+[![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 
 Generate a HTTP API wrapper package from a yaml template for the API
 
@@ -106,7 +105,7 @@ Get citation information for `apipkgen` in R by running: `citation(package = 'ap
 
 ## Code of Conduct
 
-Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md).
+Please note that this project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md).
 By participating in this project you agree to abide by its terms.
 
 
