--- a/README.Rmd
+++ b/README.Rmd
@@ -38,13 +38,13 @@ The internals are a little hacky, but the point is to have as few dependencies a
 
 ## Package Status and Installation
 
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/ropensci/apipkgen?branch=master&svg=true)](https://ci.appveyor.com/project/ropensci/apipkgen)
-[![Travis-CI Build Status](https://travis-ci.org/ropenscilabs/apipkgen.svg?branch=master)](https://travis-ci.org/)
- [![codecov](https://codecov.io/gh/ropenscilabs/apipkgen/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/apipkgen)
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/sckott/apipkgen?branch=master&svg=true)](https://ci.appveyor.com/project/sckott/apipkgen)
+[![Travis-CI Build Status](https://travis-ci.org/sckott/apipkgen.svg?branch=master)](https://travis-ci.org/)
+ [![codecov](https://codecov.io/gh/sckott/apipkgen/branch/master/graph/badge.svg)](https://codecov.io/gh/sckott/apipkgen)
 [![rstudio mirror downloads](http://cranlogs.r-pkg.org/badges/apipkgen?color=blue)](https://github.com/metacran/cranlogs.app)
 
 ```{r eval=FALSE}
-devtools::install_github("ropenscilabs/apipkgen")
+remotes::install_github("sckott/apipkgen")
 ```
 
 ```{r}
@@ -215,6 +215,3 @@ Get citation information for `apipkgen` in R by running: `citation(package = 'ap
 
 Please note that this project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md).
 By participating in this project you agree to abide by its terms.
-
-
-[![ropensci_footer](https://ropensci.org/public_images/github_footer.png)](https://ropensci.org)
