--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,7 @@ apipkgen
 
 ```{r echo=FALSE}
 knitr::opts_chunk$set(
+  eval = FALSE,
   warning = FALSE,
   message = FALSE,
   collapse = TRUE,
@@ -11,6 +12,7 @@ knitr::opts_chunk$set(
 ```
 
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
+
 
 Generate a HTTP API wrapper package from a yaml template for the API
 
@@ -36,15 +38,11 @@ The internals are a little hacky, but the point is to have as few dependencies a
 * stripe <https://github.com/stripe/openapi> (requires auth)
 * Canada's BC government <https://github.com/bcgov/api-specs> (auth not required)
 
-## Package Status and Installation
-
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/sckott/apipkgen?branch=master&svg=true)](https://ci.appveyor.com/project/sckott/apipkgen)
-[![Travis-CI Build Status](https://travis-ci.org/sckott/apipkgen.svg?branch=master)](https://travis-ci.org/)
- [![codecov](https://codecov.io/gh/sckott/apipkgen/branch/master/graph/badge.svg)](https://codecov.io/gh/sckott/apipkgen)
-[![rstudio mirror downloads](http://cranlogs.r-pkg.org/badges/apipkgen?color=blue)](https://github.com/metacran/cranlogs.app)
+## Install
 
 ```{r eval=FALSE}
-remotes::install_github("sckott/apipkgen")
+# install.packages("pak")
+pak::pak("sckott/apipkgen")
 ```
 
 ```{r}
@@ -206,10 +204,6 @@ unlink(doaj_spec_path, TRUE)
 remove.packages("doaj")
 ```
 
-
-## Citation
-
-Get citation information for `apipkgen` in R by running: `citation(package = 'apipkgen')`
 
 ## Code of Conduct
 
