--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 ```
 
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
-
+[![R-CMD-check](https://github.com/sckott/apipkgen/actions/workflows/check.yml/badge.svg)](https://github.com/sckott/apipkgen/actions/workflows/check.yml)
 
 Generate a HTTP API wrapper package from a yaml template for the API
 
