--- a/README.Rmd
+++ b/README.Rmd
@@ -56,8 +56,9 @@ library("apipkgen")
 use the function `generate_pkg()`
 
 ```{r eval=FALSE}
-template <- system.file('examples', 'template_crossref.yml',
-    package = "apipkgen")
+template <- system.file("examples", "template_crossref.yml",
+  package = "apipkgen"
+)
 path <- file.path(tempdir(), "crpkg")
 generate_pkg(path, template_path = template)
 ```
@@ -124,7 +125,7 @@ jsonlite::fromJSON(res)
 Get a spec, in this case from the Province of British Columbia <https://github.com/bcgov/api-specs>
 
 ```{r}
-bc_spec <- 
+bc_spec <-
   "https://raw.githubusercontent.com/bcgov/api-specs/master/bcgnws/bcgnws.json"
 bc_spec_path <- "bcgov_bcgnws.yaml"
 download.file(bc_spec, bc_spec_path)
@@ -134,7 +135,7 @@ Generate the package, and install it
 
 ```{r}
 generate_pkg(
-  pkg_path = "bcgov/", 
+  pkg_path = "bcgov/",
   template_path = bc_spec_path
 )
 devtools::document("bcgov")
@@ -182,7 +183,7 @@ Generate the package, and install it
 
 ```{r}
 generate_pkg(
-  pkg_path = "doaj/", 
+  pkg_path = "doaj/",
   template_path = doaj_spec_path,
   base_url = "https://doaj.org"
 )
